Create project skeleton andupdate gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 #Ignores target
 target/*
 
+#Ignores Eclipse things
+.settings/*
+.project
+.classpath
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -13,3 +18,4 @@ target/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
