Make .gitignore to ignore ide-specific files

--- a/.gitignore
+++ b/.gitignore
@@ -18,18 +18,18 @@ www-test/
 .gwt-tmp/
 
 ## Android Studio and Intellij and Android in general
+*.ipr
+*.iws
+*.iml
+com_crashlytics_export_strings.xml
+.idea/
 /android/libs/armeabi/
 /android/libs/armeabi-v7a/
 /android/libs/arm64-v8a/
 /android/libs/x86/
 /android/libs/x86_64/
 /android/gen/
-.idea/
-#*.ipr
-*.iws
-#*.iml
 /android/out/
-com_crashlytics_export_strings.xml
 
 ## Eclipse
 
@@ -61,13 +61,13 @@ com_crashlytics_export_strings.xml
 /ios/nbproject/private/
 /ios-moe/nbproject/private/
 
-/build/
-/android/build/
-/core/build/
-/desktop/build/
-/html/build/
-/ios/build/
-/ios-moe/build/
+#/build/
+#/android/build/
+#/core/build/
+#/desktop/build/
+#/html/build/
+#/ios/build/
+#/ios-moe/build/
 
 /nbbuild/
 /android/nbbuild/
