--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,9 @@ project(":core") {
     apply plugin: "java"
 
 	sourceSets.test.java.srcDirs = ["test/"]
-
+	test {
+		  testLogging.showStandardStreams = true
+	}
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
